--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
   <h2>Megaride</h2>
   <p>Vis-tach energie.</p>
-  
+
 <div>
   <a href="https://www.adidas.nl/heren-superstar">Shop heren →</a>
   <a href="https://www.adidas.nl/dames-superstar">Shop dames →</a>
@@ -373,20 +373,18 @@
 	<a href="https://www.runtastic.com/apps/runtastic/activity?utm_campaign=AppCollection_MembershipTest&utm_content=membershipTest&utm_medium=dotcom&utm_source=adidas_dotcom&utm_term=August2024">
 		<img src="images/adidas-wit.jpg" alt="adidas app">
 		<p>running</p>
-		<ul></ul>
 	</a>
 </li>
-
 </ul>
 
 </section>
 
-<!-- 8e dropdowns -->	 
+<!-- 8e section dropdowns -->	 
 
 <section>
   
 	<details>
-	  <summary>LET'S MOVE</summary>
+	  <summary>LET'S MOVE <span>▼</span></summary>
 	  <ul>
 		<li><a href="https://www.adidas.nl/hardlopen-schoenen">Hardloopschoenen</a></li>
 		<li><a href="https://www.adidas.nl/fitness_en_training-schoenen">Fitness en Training Schoenen</a></li>
@@ -394,7 +392,7 @@
 	</details>
   
 	<details>
-	  <summary>STRAATICONEN</summary>
+	  <summary>STRAATICONEN <span>▼</span></summary>
 	  <ul>
 		<li><a href="https://www.adidas.nl/gazelle">Gazelle</a></li>
 		<li><a href="https://www.adidas.nl/samba?cm_mmc=AdieSEM_Google-_-adidas-Product_Ranges-B-Exact-ROI-PSTRB-_-Franchise+-+Samba-_-samba+adidas&cm_mmca1=NL&cm_mmca2=e&ds_kid=297370459085&af_reengagement_window=30d&is_retargeting=true&pid=googleadwords_temp&c=adidas-Product_Ranges-B-Exact-ROI-PSTRB&af_channel=Search&gclsrc=aw.ds&gad_source=1&gad_campaignid=1010469781&gbraid=0AAAAADwBzxqN9JTw-H3H2K7bPHBGw-w68&gclid=Cj0KCQjw5onGBhDeARIsAFK6QJYo7ltM_V5ADKME_M217CgJLMNKbNHGdT4O8kKstjYOxZua9qGVBFwaAo1zEALw_wcB">Samba</a></li>
@@ -402,7 +400,7 @@
 	</details>
   
 	<details>
-	  <summary>ALLEDAAGSE BENODIGDHEDEN</summary>
+	  <summary>ALLEDAAGSE BENODIGDHEDEN <span>▼</span></summary>
 	  <ul>
 		<li><a href="https://www.adidas.nl/originals?cm_mmc=AdieSEM_Google-_-adidas-Product_Ranges-B-Exact-ROI-PSTRB-_-Franchise+-+Originals-_-originals+adidas&cm_mmca1=NL&cm_mmca2=e&ds_kid=296052243559&af_reengagement_window=30d&is_retargeting=true&pid=googleadwords_temp&c=adidas-Product_Ranges-B-Exact-ROI-PSTRB&af_channel=Search&gclsrc=aw.ds&gad_source=1&gad_campaignid=1010469781&gbraid=0AAAAADwBzxqN9JTw-H3H2K7bPHBGw-w68&gclid=Cj0KCQjw5onGBhDeARIsAFK6QJbQavMcOdSXN8lUkED6mHQfPKCVXRS2daGq2MSmct087j5PbcheltMaAo9oEALw_wcB">Orginals Schoenen</a></li>
 		<li><a href="https://www.adidas.nl/shirts-kleding?cm_mmc=AdieSEM_Google-_-adidas-Product_Types-B-Exact-ROI-PSTRB-_-t-shirt-_-t-shirt+adidas&cm_mmca1=NL&cm_mmca2=e&ds_kid=296200125096&af_reengagement_window=30d&is_retargeting=true&pid=googleadwords_temp&c=adidas-Product_Types-B-Exact-ROI-PSTRB&af_channel=Search&gclsrc=aw.ds&gad_source=1&gad_campaignid=1010470468&gbraid=0AAAAADwBzxqu4aWvdWAFLnjV2zGBeHGzj&gclid=Cj0KCQjw5onGBhDeARIsAFK6QJYFdH6FTr-F3WGxEZEtT35eZrGanckqBlreQgD7pV882URElIamrk4aAmwREALw_wcB">T-shirts</a></li>
@@ -417,13 +415,12 @@
 
 <h2>ADIDAS SPORTWINKEL VOOR PERFORMANCE, STIJL & INNOVATIE - SINDS 1949</h2>
 
-<p>Sport houdt ons fit. Houdt ons alert. Brengt ons samen. Sport heeft de kracht om levens te veranderen - via verhalen van inspirerende sporters en innovatieve technologieën, en door je te helpen op te staan en te bewegen.
-	Vind high-performance activewear en sportkleding gemaakt met de nieuwste technologieën om je te helpen je grenzen te verleggen. Of je nu een hardloper bent, een basketbalspeler, een voetballer of iemand die gewoon graag actief blijft, onze sportwinkel is de ultieme thuisbasis voor al jouw sportkleding. We zijn hier om je te helpen harder te trainen, sneller te lopen en vooruitgang te boeken met producten die je bij kunnen benen en je doelen ondersteunen.
-	Ontdek onze online winkel voor de nieuwste adidas-collecties met de perfecte mix van innovatie en stijl. De sportwinkel van adidas biedt performance sportuitrustingen voor alle niveaus - of je nu een topsporter bent, een fitnessfan, of net begonnen bent met trainen. Onze online winkel garandeert dat je overal toegang hebt tot de nieuwste gear.
-	De adidas sportwinkel is meer dan alleen een plek om sportuitrustingen te shoppen: het is een plek voor creators om hun skills naar een hoger niveau te tillen en nieuwe mogelijkheden te creëren. Elk item in onze sportwinkel is ontworpen met performance en duurzaamheid in het achterhoofd, zodat je zelfverzekerd kunt bewegen. Bij adidas bundelen we de krachten met de besten in de industrie om samen te creëren, en zorgen we ervoor dat elk kledingstuk beweging, zelfexpressie en een actieve lifestyle ondersteunt. Waar de sport je ook brengt, onze online winkel heeft alles voor je in huis om je klaar te stomen voor succes.
-</p>
+<p>Sport houdt ons fit. Houdt ons alert. Brengt ons samen. Sport heeft de kracht om levens te veranderen - via verhalen van inspirerende sporters en innovatieve technologieën, en door je te helpen op te staan en te bewegen.</p>
+<p>Vind high-performance activewear en sportkleding gemaakt met de nieuwste technologieën om je te helpen je grenzen te verleggen. Of je nu een hardloper bent, een basketbalspeler, een voetballer of iemand die gewoon graag actief blijft, onze sportwinkel is de ultieme thuisbasis voor al jouw sportkleding. We zijn hier om je te helpen harder te trainen, sneller te lopen en vooruitgang te boeken met producten die je bij kunnen benen en je doelen ondersteunen.</p>
+<p>Ontdek onze online winkel voor de nieuwste adidas-collecties met de perfecte mix van innovatie en stijl. De sportwinkel van adidas biedt performance sportuitrustingen voor alle niveaus - of je nu een topsporter bent, een fitnessfan, of net begonnen bent met trainen. Onze online winkel garandeert dat je overal toegang hebt tot de nieuwste gear.</p>
+<p>De adidas sportwinkel is meer dan alleen een plek om sportuitrustingen te shoppen: het is een plek voor creators om hun skills naar een hoger niveau te tillen en nieuwe mogelijkheden te creëren. Elk item in onze sportwinkel is ontworpen met performance en duurzaamheid in het achterhoofd, zodat je zelfverzekerd kunt bewegen. Bij adidas bundelen we de krachten met de besten in de industrie om samen te creëren, en zorgen we ervoor dat elk kledingstuk beweging, zelfexpressie en een actieve lifestyle ondersteunt. Waar de sport je ook brengt, onze online winkel heeft alles voor je in huis om je klaar te stomen voor succes.</p>
 
-<img src="images/adidas-logo.png" alt="logo adidas">
+<img src="images/witte-adidas-logo.png" alt="logo adidas">
 
 </section> 
 
@@ -431,7 +428,10 @@
 <section>
     <h2>JOUW MEING TELT!</h2>
     <p>We streven ernaar om je nog beter van dienst te zijn en stellen je feedback zeer op prijs.</p>
-</section>
+
+	<a href="file:///C:/Users/Gebruiker/Downloads/basiswebsite/index.html#"><span>⌃</span> Terug naar boven</a>
+
+</section> 
 
 </main>
 
@@ -446,26 +446,26 @@
 <!-- 11e section lid worden-->
 	<section>
 		<h2>Word lid en krijg 10% korting*</h2>
-		<a href="#">Meld je gratis aan →</a>
+		<a href="adidas.nl/account-login">Meld je gratis aan →</a>
 	  </section>
 
 	  
 <!-- Navigatiekolommen -->
 <nav>
-<ul>
-  <li><a href="https://www.adidas.nl/help?hcid=DELIVERY">Bezorging</a></li>
-  <li><a href="https://www.adidas.nl/bestelling-volgen">Bestelstatus</a></li>
-  <li><a href="https://www.adidas.nl/help-topics-imprint">Colofon</a></li>
-  <li><a href="https://www.adidas.nl/help">Help</a></li>
-</ul>
-
-<ul>
-  <li><a href="https://www.adidas.nl/help/retour-vergoeding">Retouren & Terugbetalingen</a></li>
-  <li><a href="https://www.adidas.nl/glass/sitemaps/adidas/NL/nl/html-sitemap/index.html">Sitemap</a></li>
-  <li><a href="https://www.adidas.nl/help?hcid=PAYMENT">Betalen</a></li>
-  <li><a href="https://www.adidas.nl/stores">Winkelzoeker</a></li>
-</ul>
-</nav>
+	<ul>
+	  <li><a href="https://www.adidas.nl/help?hcid=DELIVERY">Bezorging</a></li>
+	  <li><a href="https://www.adidas.nl/bestelling-volgen">Bestelstatus</a></li>
+	  <li><a href="https://www.adidas.nl/help-topics-imprint">Colofon</a></li>
+	  <li><a href="https://www.adidas.nl/help">Help</a></li>
+	</ul>
+	
+	<ul>
+	  <li><a href="https://www.adidas.nl/help/retour-vergoeding">Retouren & Terugbetalingen</a></li>
+	  <li><a href="https://www.adidas.nl/glass/sitemaps/adidas/NL/nl/html-sitemap/index.html">Sitemap</a></li>
+	  <li><a href="https://www.adidas.nl/help?hcid=PAYMENT">Betalen</a></li>
+	  <li><a href="https://www.adidas.nl/stores">Winkelzoeker</a></li>
+	</ul>
+	</nav>
 
 <!-- 12e section Disclaimers in kleine lettertjes -->
 <section>
