--- a/index.html
+++ b/index.html
@@ -184,12 +184,13 @@
   
   
 <!-- 5e section 1e productenlijst -->	  
-<!-- geen nav maar ul met buttons -->
 <section>
+
+	<h2>Nieuw binnen</h2>
 <ul>
-    <button>Exclusief voor leden</button>
-    <button>Nieuwe producten</button>
-    <button>Binnenkort verkrijgbaar</button>
+   <li><button>Exclusief voor leden</button></li>
+    <li><button>Nieuwe producten</button></li>
+    <li><button>Binnenkort verkrijgbaar</button></li>
 </ul>
 
 
@@ -380,9 +381,10 @@
 </section>
 
 <!-- 8e section dropdowns -->	 
-
 <section>
-  
+
+  <h2>dropdowns</h2>
+
 	<details>
 	  <summary>LET'S MOVE <span>▼</span></summary>
 	  <ul>
@@ -410,7 +412,6 @@
   </section>
   
 <!-- 9e section artikel -->	
-
 <section>
 
 <h2>ADIDAS SPORTWINKEL VOOR PERFORMANCE, STIJL & INNOVATIE - SINDS 1949</h2>
@@ -454,7 +455,7 @@
 <nav>
 	<ul>
 	  <li><a href="https://www.adidas.nl/help?hcid=DELIVERY">Bezorging</a></li>
-	  <li><a href="https://www.adidas.nl/bestelling-volgen">Bestelstatus</a></li>
+	  <li><a href="https://www.adidas.nl/bestelling-volgen">Bestelingsstatus</a></li>
 	  <li><a href="https://www.adidas.nl/help-topics-imprint">Colofon</a></li>
 	  <li><a href="https://www.adidas.nl/help">Help</a></li>
 	</ul>
@@ -465,20 +466,15 @@
 	  <li><a href="https://www.adidas.nl/help?hcid=PAYMENT">Betalen</a></li>
 	  <li><a href="https://www.adidas.nl/stores">Winkelzoeker</a></li>
 	</ul>
-	</nav>
 
-<!-- 12e section Disclaimers in kleine lettertjes -->
-<section>
-<p>
-Kortingsvouchers kunnen worden gebruikt voor een groot aantal van je favoriete adidas-artikelen;
-er gelden bepaalde uitzonderingen en verkoopbeperkingen. Ga naar
-https://www.adidas.com/om/en/selected_items voor uitgesloten items.
-</p>
-</section>
-
+	<p>
+		Kortingsvouchers kunnen worden gebruikt voor een groot aantal van je favoriete adidas-artikelen;
+		er gelden bepaalde uitzonderingen en verkoopbeperkingen. Ga naar
+		https://www.adidas.com/om/en/selected_items voor uitgesloten items.
+    </p>
+	</nav>	
 
 <!-- 13e section beleid -->
-<section>
 <button>Cookie-instellingen</button>
 <button>Beheer gegevens</button>
 
@@ -488,8 +484,6 @@ https://www.adidas.com/om/en/selected_items voor uitgesloten items.
   <li><a href="https://www.adidas.nl/terms_and_conditions">Algemene voorwaarden</a></li>
   <li><a href="https://www.adidas.nl/help/bedrijfsgegevens/adidas-website-toegankelijkheidsverklaring">Toegankelijkheid</a></li>
 </ul>
-
-</section>
 
 </footer>
 
