--- a/detailpagina.html
+++ b/detailpagina.html
@@ -70,7 +70,7 @@
 		  </ul>
 		</nav>
 	  </header>
-        
+
     <main>
      <p>
         <a href="https://www.adidas.nl/">Home</a>
@@ -79,7 +79,7 @@
     </p>
 
 <!-- 1e section/ eerste schoen die word weergeven-->
-<section>
+<section class="hoofdproduct">
     <h1>ADISTAR CONTROL 5 SCHOENEN</h1>
     <H2>€120</H2>
 
@@ -99,6 +99,7 @@
 
 
 <!-- form kiezen van andere schoen soort en maat-->
+
 <form>
 
     <!-- Kleuren -->
@@ -130,7 +131,7 @@
   
     <!-- Maten -->
     <fieldset>
-      <legend>Maten</legend>
+      <legend>Maten</legend>    
       <ul>
         <li><label><input type="radio" name="maat" value="35 ½">35 ½</label></li>
         <li><label><input type="radio" name="maat" value="36">36</label></li>
@@ -152,35 +153,32 @@
         <li><label><input type="radio" name="maat" value="47 ⅓">47 ⅓</label></li>
         <li><label><input type="radio" name="maat" value="48">48</label></li>
       </ul>
-      <p>Valt normaal. We raden je aan om je gebruikelijke maat te bestellen.</p>
+      <p><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class="size-advice_icon-wrapper__nXcRv"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 27C22.0751 27 27 22.0751 27 16C27 9.92487 22.0751 5 16 5C9.92487 5 5 9.92487 5 16C5 22.0751 9.92487 27 16 27ZM16 28C22.6274 28 28 22.6274 28 16C28 9.37258 22.6274 4 16 4C9.37258 4 4 9.37258 4 16C4 22.6274 9.37258 28 16 28Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16.5 14V22H15.5V14H16.5Z" fill="var(--icon-primary-color, #000)"></path><path d="M16 12C16.5523 12 17 11.5523 17 11C17 10.4477 16.5523 10 16 10C15.4477 10 15 10.4477 15 11C15 11.5523 15.4477 12 16 12Z" fill="var(--icon-primary-color, #000)"></path></svg>Valt normaal. We raden je aan om je gebruikelijke maat te bestellen.</p>
     </fieldset>
   
   </form>
   
    <!-- 2e section maar kiezen + wishlist-->
-   <!-- MOET EEN HEADER HEBBEN-->
-<section>
     <!-- grote zwarte knop en hartje-knop -->
-    <button>Kies maat →</button>
-    <button>♡</button>
+<section class="info">
+    <h2>toevoegen aan winkelwagen</h2>
+
+    <button>In winkelwagen <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class="stripes_v7_gl-cta__button-icon"><path fill-rule="evenodd" clip-rule="evenodd" d="M9 4H19V8H24V14.7517C23.6769 14.6056 23.3431 14.479 23 14.3736V9H19V12H18V9H10V12H9V9H5V27H13.2876C13.5072 27.3514 13.7519 27.6855 14.019 28H4V8H9V4ZM18 5V8H10V5H18Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M20.5 16C16.9101 16 14 18.9101 14 22.5C14 26.0899 16.9101 29 20.5 29C24.0899 29 27 26.0899 27 22.5C27 18.9101 24.0899 16 20.5 16ZM13 22.5C13 18.3579 16.3579 15 20.5 15C24.6421 15 28 18.3579 28 22.5C28 26.6421 24.6421 30 20.5 30C16.3579 30 13 26.6421 13 22.5Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M21 23H24V22H21V19H20V22H17V23H20V26H21V23Z" fill="var(--icon-primary-color, #000)"></path></svg></button>
+    <button><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class="stripes_v7_gl-cta__button-icon"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg></button>
   
     <!-- tekstlink met uitleg over betaling -->
     <p>
         3 betalingen van € 40,00 tegen 0% rente met <strong>Klarna</strong>
         <a href="https://www.klarna.com/nl/voorwaarden/">Meer informatie</a>
-    </p>
-  </section>
-  
-   <!-- 3e section bezorg info-->
-   <!--MOET EEN HEADER HEBBEN-->
-  <section>
+    </p> 
+ 
     <!-- bezorging pop up -->
-    <button>⟳ Bezorgdata ophalen</button>
+    <button><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class="delivery-promise-check-link_icon__ROSoz"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 5C12.9113 5 10.1128 6.2778 8.0812 8.35004L7.36713 7.64996C9.57655 5.39635 12.6283 4 16 4C22.5666 4 28 9.21809 28 16C28 22.7833 22.5168 28 16 28C12.6283 28 9.57651 26.6036 7.36708 24.35L8.08116 23.65C10.1128 25.7222 12.9112 27 16 27C21.9788 27 27 22.2167 27 16C27 9.78191 22.0259 5 16 5Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M2 12.5L9 12.5V13.5L2 13.5L2 12.5Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M3 15.5L9 15.5V16.5L3 16.5L3 15.5Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M4 18.5H9V19.5H4V18.5Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M15.5 8H16.5V15.7929L19.8536 19.1464L19.1464 19.8536L15.5 16.2071V8Z" fill="var(--icon-primary-color, #000)"></path></svg> Bezorgdata ophalen</button>
   
     <!-- verzendinfo -->
     <ul>
-      <li><strong>Gratis verzending voor adiClub-leden</strong></li>
-      <li><strong>Gratis express-verzending naar onze adidas-winkel</strong></li>
+      <li><p>Gratis verzending voor adiClub-leden</p></li>
+      <li><p>Gratis express-verzending naar onze adidas-winkel</p></li>
     </ul>
   </section>
   
@@ -274,7 +272,7 @@
       <li>
         <a href="https://www.adidas.nl/tyshawn-ii-x-zach/JQ1620.html?pr=product_rr&slot=2&rec=ds">
           <img src="images/wit-bruine-schoen.jpg" alt="witte schoen met bruine strepen">
-          <h3> €100</h3>
+          <h3> €100</h3> 
           <p>Tyshawn II X Zach</p>
           <p>Originals</p>
         </a>
@@ -318,63 +316,56 @@
 </main>
 
 
-    <footer>
+<footer>
 
-        <nav>
-            <a href="adidas.nl/account-login">Login</a>
-            <a href="https://www.adidas.nl/cart">Winkelwagen</a>
-          </nav>
+	<nav>
+		<a href="adidas.nl/account-login">Login</a>
+		<a href="https://www.adidas.nl/cart">Winkelwagen</a>
+	  </nav>
 
-<!-- 8e section lid worden-->
-        <section>
-            <h2>Word lid en krijg 10% korting*</h2>
-            <a href="#">Meld je gratis aan →</a>
-          </section>
+<!-- 11e section lid worden-->
+	<section>
+		<h2>Word lid en krijg 10% korting*</h2>
+		<a href="adidas.nl/account-login">Meld je gratis aan →</a>
+	  </section>
 
-          
-  <!-- Navigatiekolommen -->
-  <nav>
-    <ul>
-      <li><a href="https://www.adidas.nl/help?hcid=DELIVERY">Bezorging</a></li>
-      <li><a href="https://www.adidas.nl/bestelling-volgen">Bestelstatus</a></li>
-      <li><a href="https://www.adidas.nl/help-topics-imprint">Colofon</a></li>
-      <li><a href="https://www.adidas.nl/help">Help</a></li>
-    </ul>
+	  
+<!-- Navigatiekolommen -->
+<nav>
+	<ul>
+	  <li><a href="https://www.adidas.nl/help?hcid=DELIVERY">Bezorging</a></li>
+	  <li><a href="https://www.adidas.nl/bestelling-volgen">Bestelingsstatus</a></li>
+	  <li><a href="https://www.adidas.nl/help-topics-imprint">Colofon</a></li>
+	  <li><a href="https://www.adidas.nl/help">Help</a></li>
+	</ul>
+	
+	<ul>
+	  <li><a href="https://www.adidas.nl/help/retour-vergoeding">Retouren & Terugbetalingen</a></li>
+	  <li><a href="https://www.adidas.nl/glass/sitemaps/adidas/NL/nl/html-sitemap/index.html">Sitemap</a></li>
+	  <li><a href="https://www.adidas.nl/help?hcid=PAYMENT">Betalen</a></li>
+	  <li><a href="https://www.adidas.nl/stores">Winkelzoeker</a></li>
+	</ul>
 
-    <ul>
-      <li><a href="https://www.adidas.nl/help/retour-vergoeding">Retouren & Terugbetalingen</a></li>
-      <li><a href="https://www.adidas.nl/glass/sitemaps/adidas/NL/nl/html-sitemap/index.html">Sitemap</a></li>
-      <li><a href="https://www.adidas.nl/help?hcid=PAYMENT">Betalen</a></li>
-      <li><a href="https://www.adidas.nl/stores">Winkelzoeker</a></li>
-    </ul>
-  </nav>
+	<p>
+		Kortingsvouchers kunnen worden gebruikt voor een groot aantal van je favoriete adidas-artikelen;
+		er gelden bepaalde uitzonderingen en verkoopbeperkingen. Ga naar
+		https://www.adidas.com/om/en/selected_items voor uitgesloten items.
+    </p>
+	</nav>	
 
-<!-- 9e section Disclaimers in kleine lettertjes -->
- <section>
-<p>
-    Kortingsvouchers kunnen worden gebruikt voor een groot aantal van je favoriete adidas-artikelen;
-    er gelden bepaalde uitzonderingen en verkoopbeperkingen. Ga naar
-    https://www.adidas.com/om/en/selected_items voor uitgesloten items.
-  </p>
-</section>
+<!-- 13e section beleid -->	
+<button>Cookie-instellingen</button>
+<button>Beheer gegevens</button>
+
+<ul>
+  <li><a href="https://www.adidas.nl/privacy_policy#cookies">Cookies</a></li>
+  <li><a href="https://www.adidas.nl/privacy_policy">Privacybeleid</a></li>
+  <li><a href="https://www.adidas.nl/terms_and_conditions">Algemene voorwaarden</a></li>
+  <li><a href="https://www.adidas.nl/help/bedrijfsgegevens/adidas-website-toegankelijkheidsverklaring">Toegankelijkheid</a></li>
+</ul>
 
 
-  <!-- 10e section beleid -->
-  <!-- MOET EEN HEADER HEBBEN -->
-<section>
-    <button>Cookie-instellingen</button>
-    <button>Beheer gegevens</button>
-
-    <ul>
-      <li><a href="https://www.adidas.nl/privacy_policy#cookies">Cookies</a></li>
-      <li><a href="https://www.adidas.nl/privacy_policy">Privacybeleid</a></li>
-      <li><a href="https://www.adidas.nl/terms_and_conditions">Algemene voorwaarden</a></li>
-      <li><a href="https://www.adidas.nl/help/bedrijfsgegevens/adidas-website-toegankelijkheidsverklaring">Toegankelijkheid</a></li>
-    </ul>
-
-</section>
-
-    </footer>
+</footer>
 
         <script defer src="scripts/script.js"></script>
     </body>
