--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
     </p>
 	</nav>	
 
-<!-- 13e section beleid -->
+<!--beleid -->	
 <button>Cookie-instellingen</button>
 <button>Beheer gegevens</button>
 
@@ -484,6 +484,7 @@
   <li><a href="https://www.adidas.nl/terms_and_conditions">Algemene voorwaarden</a></li>
   <li><a href="https://www.adidas.nl/help/bedrijfsgegevens/adidas-website-toegankelijkheidsverklaring">Toegankelijkheid</a></li>
 </ul>
+
 
 </footer>
 
