--- a/detailpagina.html
+++ b/detailpagina.html
@@ -12,7 +12,7 @@
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
-<body>
+<body class="detailpagina">
 
     <header>
 		<!-- eenvoudige hamburger -->
@@ -33,7 +33,7 @@
 			<li><a href="#">KLEDING</a></li>
 			<li><a href="#">SPORTEN</a></li>
 			<li><a href="#">OUTLET</a></li>
-		  </ul>
+		  </ul> 
 	  
 		  <!-- klikbare links onder elkaar -->
 		  <ul>
@@ -79,7 +79,7 @@
     </p>
 
 <!-- 1e section/ eerste schoen die word weergeven-->
-<section class="hoofdproduct">
+<section>
     <h1>ADISTAR CONTROL 5 SCHOENEN</h1>
     <H2>€120</H2>
 
@@ -158,9 +158,9 @@
   
   </form>
   
-   <!-- 2e section maar kiezen + wishlist-->
+   <!-- 2e section maat kiezen + wishlist-->
     <!-- grote zwarte knop en hartje-knop -->
-<section class="info">
+<section>
     <h2>toevoegen aan winkelwagen</h2>
 
     <button>In winkelwagen <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true" class="stripes_v7_gl-cta__button-icon"><path fill-rule="evenodd" clip-rule="evenodd" d="M9 4H19V8H24V14.7517C23.6769 14.6056 23.3431 14.479 23 14.3736V9H19V12H18V9H10V12H9V9H5V27H13.2876C13.5072 27.3514 13.7519 27.6855 14.019 28H4V8H9V4ZM18 5V8H10V5H18Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M20.5 16C16.9101 16 14 18.9101 14 22.5C14 26.0899 16.9101 29 20.5 29C24.0899 29 27 26.0899 27 22.5C27 18.9101 24.0899 16 20.5 16ZM13 22.5C13 18.3579 16.3579 15 20.5 15C24.6421 15 28 18.3579 28 22.5C28 26.6421 24.6421 30 20.5 30C16.3579 30 13 26.6421 13 22.5Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M21 23H24V22H21V19H20V22H17V23H20V26H21V23Z" fill="var(--icon-primary-color, #000)"></path></svg></button>
@@ -177,17 +177,19 @@
   
     <!-- verzendinfo -->
     <ul>
-      <li><p>Gratis verzending voor adiClub-leden</p></li>
-      <li><p>Gratis express-verzending naar onze adidas-winkel</p></li>
+      <li><p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-truck" viewBox="0 0 16 16">
+        <path d="M0 3.5A1.5 1.5 0 0 1 1.5 2h9A1.5 1.5 0 0 1 12 3.5V5h1.02a1.5 1.5 0 0 1 1.17.563l1.481 1.85a1.5 1.5 0 0 1 .329.938V10.5a1.5 1.5 0 0 1-1.5 1.5H14a2 2 0 1 1-4 0H5a2 2 0 1 1-3.998-.085A1.5 1.5 0 0 1 0 10.5zm1.294 7.456A2 2 0 0 1 4.732 11h5.536a2 2 0 0 1 .732-.732V3.5a.5.5 0 0 0-.5-.5h-9a.5.5 0 0 0-.5.5v7a.5.5 0 0 0 .294.456M12 10a2 2 0 0 1 1.732 1h.768a.5.5 0 0 0 .5-.5V8.35a.5.5 0 0 0-.11-.312l-1.48-1.85A.5.5 0 0 0 13.02 6H12zm-9 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m9 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2"/>
+      </svg>Gratis verzending voor adiClub-leden</p></li>
+      <li><p><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-geo-alt" viewBox="0 0 16 16">
+        <path d="M12.166 8.94c-.524 1.062-1.234 2.12-1.96 3.07A32 32 0 0 1 8 14.58a32 32 0 0 1-2.206-2.57c-.726-.95-1.436-2.008-1.96-3.07C3.304 7.867 3 6.862 3 6a5 5 0 0 1 10 0c0 .862-.305 1.867-.834 2.94M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10"/>
+        <path d="M8 8a2 2 0 1 1 0-4 2 2 0 0 1 0 4m0 1a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+      </svg>Gratis express-verzending naar onze adidas-winkel</p></li>
     </ul>
   </section>
   
 
- <!-- 4e section dropdowns -->
-  <!-- MAG EEN DETAIL IN SECTION-->
-  <section>
-  
-    <!-- moeilijk te stijlen dus probeer zo goed mogelijk -->
+ <!--dropdowns -->
+ 
 	<details>
 	  <summary>Beschrijving</summary>
       <h2>DE Y2K HARDLOOPSTIJL LEEFT VOORT IN DEZE LIFESTYLE SNEAKERS.</h2>
@@ -208,7 +210,7 @@
       </ul>      
 	</details>
   
-</section>
+
 
 <!-- 5e section lijstje met looks voorstellen -->
  <!-- article maken als kan -->
