--- a/detailpagina.html
+++ b/detailpagina.html
@@ -191,14 +191,14 @@
  <!--dropdowns -->
  
 	<details>
-	  <summary>Beschrijving</summary>
+	  <summary>Beschrijving<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 19.2929L8.35359 11.6465L7.64648 12.3536L16 20.7071L24.3536 12.3536L23.6465 11.6465L16 19.2929Z" fill="var(--icon-primary-color, #000)"></path></svg></summary>
       <h2>DE Y2K HARDLOOPSTIJL LEEFT VOORT IN DEZE LIFESTYLE SNEAKERS.</h2>
 	 <p>De adidas Adistar Control 5 sneakers brengen een iconische hardloopstijl uit de jaren 2000 terug. Het bovenwerk van open mesh is gelaagd met metallic zilveren details en synthetische 3-Stripes. Een EVA-middenzool en Adiprene+ in de voorvoet bieden demping voor een soepele tred, terwijl de rubberen loopzool robuuste grip toevoegt.    
      </p>
 	</details>
   
 	<details>
-	  <summary>kenmerken</summary>
+	  <summary>kenmerken<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 19.2929L8.35359 11.6465L7.64648 12.3536L16 20.7071L24.3536 12.3536L23.6465 11.6465L16 19.2929Z" fill="var(--icon-primary-color, #000)"></path></svg></summary>
       <ul>
         <li>Normale pasvorm</li>
         <li>Vetersluiting</li>
@@ -212,8 +212,7 @@
   
 
 
-<!-- 5e section lijstje met looks voorstellen -->
- <!-- article maken als kan -->
+<!-- 3e section lijstje met looks voorstellen -->
 <section>
     <h2>MAAK JE LOOK HELEMAAL</h2>
   
@@ -222,8 +221,8 @@
         <a href="https://www.adidas.nl/adicolor-classics-firebird-trainingsbroek/IJ7055.html?pr=pdpctl_rr&slot=3&rec=ds">
           <img src="images/adidas-broek.jpg" alt="adidas trainingsbroek">
           <p>€ 70</p>
-          <h3>Adicolor Classic Firebird Loose Trainingsbroek</h3>
-          <p>Originals</p>
+          <h3>Adicolor Classic<br>Firebird Loose<br> Trainingsbroek</h3>
+          <span>Originals</span>
         </a>
       </li>
   
@@ -231,17 +230,17 @@
         <a href="https://www.adidas.nl/mid-enkelsokken-6-paar/IJ5626.html?pr=pdpctl_rr&slot=1&rec=ds">
           <img src="images/adidas-sokken.jpg" alt="adidas sokken 6 paar">
           <p>€ 20</p>
-          <h3>Liner Sokken 6 Paar</h3>
-          <p>Originals</p>
+          <h3>Liner Sokken<br>6 Paar</h3>
+          <span>Originals</span>
         </a>
       </li>
 
       <li>
         <a href="https://www.adidas.nl/adicolor-classics-3-stripes-t-shirt/IA4845.html?pr=pdpctl_rr&slot=2&rec=ds">
           <img src="images/adidas-shirt.jpg" alt="adidas t-shirt">
-          <p>€ 20</p>
-          <h3>Liner Sokken 6 Paar</h3>
-          <p>Originals</p>
+          <p>€ 33<p>
+          <h3>Adicolor classics<br>3-stripes T-shirt</h3>
+          <span>Originals</span>
         </a>
       </li>
 
@@ -249,14 +248,14 @@
         <a href="https://www.adidas.nl/adicolor-classics-sst-trainingsjack/IM4545.html?pr=pdpctl_rr&slot=4&rec=ds">
           <img src="images/adidas-trainingsjack.jpg" alt="adidas jas">
           <p>€ 20</p>
-          <h3>Liner Sokken 6 Paar</h3>
-          <p>Originals</p>
+          <h3>Adicolor adicolor classics trainingsjack</h3>
+          <span>Originals</span>
         </a>
-      </li>
+      </li> 
     </ul>
   </section>
   
-<!-- 6e section lijstje met meschien vind je dit ook leuk -->
+<!-- 4e section lijstje met meschien vind je dit ook leuk -->
 
 <section>
     <h2>MESCHIEN VIND JE DIT OOK LEUK</h2>
@@ -267,7 +266,7 @@
           <img src="images/grijze schoen.jpg" alt="grijze schoen">
           <h3> €180</h3>
           <p>Predator Megaride Schoenen</p>
-          <p>Sportwear</p>
+          <span>Sportwear</span>
         </a>
       </li>
   
@@ -276,7 +275,7 @@
           <img src="images/wit-bruine-schoen.jpg" alt="witte schoen met bruine strepen">
           <h3> €100</h3> 
           <p>Tyshawn II X Zach</p>
-          <p>Originals</p>
+          <span>Originals</span>
         </a>
       </li>
 
@@ -285,7 +284,7 @@
           <img src="images/zwarte-samba.jpg" alt="zwarte samba">
           <h3> €130</h3>
           <p>Samba XLG Schoenen</p>
-          <p>Originals</p>
+          <span>Originals</span>
         </a>
       </li>
 
@@ -294,7 +293,7 @@
           <img src="images/grijs-witte-schoen.jpg" alt="grijs met witte schoen">
           <h3> €120</h3>
           <p>Adistar Control 5 Schoenen</p>
-          <p>Originals</p>
+          <span>Originals</span>
         </a>
       </li>
 
@@ -303,13 +302,13 @@
           <img src="images/witte-schoen (2).jpg" alt="witte schoen">
           <h3> €120</h3>
           <p>Forum Low Classic Schoenen</p>
-          <p>Originals</p>
+          <span>Originals</span>
         </a>
       </li>
     </ul>
   </section>
   
-<!-- 7e section jouw mening kader-->
+<!-- 5e section jouw mening kader-->
 <section>
     <h2>JOUW MEING TELT!</h2>
     <p>We streven ernaar om je nog beter van dienst te zijn en stellen je feedback zeer op prijs.</p>
@@ -325,7 +324,7 @@
 		<a href="https://www.adidas.nl/cart">Winkelwagen</a>
 	  </nav>
 
-<!-- 11e section lid worden-->
+<!-- 6e section lid worden-->
 	<section>
 		<h2>Word lid en krijg 10% korting*</h2>
 		<a href="adidas.nl/account-login">Meld je gratis aan →</a>
@@ -355,7 +354,7 @@
     </p>
 	</nav>	
 
-<!-- 13e section beleid -->	
+<!--beleid -->	
 <button>Cookie-instellingen</button>
 <button>Beheer gegevens</button>
 
