--- a/detailpagina.html
+++ b/detailpagina.html
@@ -214,7 +214,7 @@
 
 <!-- 3e section lijstje met looks voorstellen -->
 <section>
-    <h2>MAAK JE LOOK HELEMAAL</h2>
+    <h2>MAAK JE LOOK HELEMAAL AF</h2>
   
   <ul>
     <li>
@@ -257,15 +257,15 @@
   
 <!-- 4e section lijstje met meschien vind je dit ook leuk -->
 
-<section>
+<section class="looks">
     <h2>MESCHIEN VIND JE DIT OOK LEUK</h2>
   
     <ul>
       <li>
         <a href="https://www.adidas.nl/predator-megaride-schoenen/JS1555.html?pr=product_rr&slot=1&rec=ds">
           <img src="images/grijze schoen.jpg" alt="grijze schoen">
-          <h3> €180</h3>
-          <p>Predator Megaride Schoenen</p>
+          <p> €180</p>
+          <h3>Predator Megaride Schoenen</h3>
           <span>Sportwear</span>
         </a>
       </li>
