--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
 
 <ul>
   <li>
-    <a href="https://www.adidas.nl/handball-spezial-made-in-germany-schoenen/JR9535.html?pr=taxonomy_rr&slot=1&rec=mt">
-		<img src="images/rode-schoen.jpg" alt="rode adidas schoen">
+    <a href="file:///C:/Users/Gebruiker/Downloads/basiswebsite/detailpagina.html?maat=40">
+		<img src="images/adistar-control-5-schoenen.jpg" alt="zilvere adidas schoen">
 	</a>
-    <button>♡</button>
+    <button>♡</button>	
   </li>
 
   <li>
