--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
 <ul>
   <li>
-    <a href="file:///C:/Users/Gebruiker/Downloads/basiswebsite/detailpagina.html?maat=40">
+    <a href="detailpagina.html">
 		<img src="images/adistar-control-5-schoenen.jpg" alt="zilvere adidas schoen">
 	</a>
     <button>♡</button>	
