--- a/detailpagina.html
+++ b/detailpagina.html
@@ -7,6 +7,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<title>Howdy FED2526</title>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue:wght@400;700&display=swap" rel="stylesheet">
+
 	
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
@@ -256,15 +258,14 @@
   </section>
   
 <!-- 4e section lijstje met meschien vind je dit ook leuk -->
-
-<section class="looks">
-    <h2>MESCHIEN VIND JE DIT OOK LEUK</h2>
+<section>
+    <h2>MISCHIEN VIND JE DIT OOK LEUK</h2>
   
     <ul>
       <li>
         <a href="https://www.adidas.nl/predator-megaride-schoenen/JS1555.html?pr=product_rr&slot=1&rec=ds">
-          <img src="images/grijze schoen.jpg" alt="grijze schoen">
-          <p> €180</p>
+          <img src="images/grijze-schoen.jpg" alt="grijze schoen">
+          <p>€ 180</p>
           <h3>Predator Megaride Schoenen</h3>
           <span>Sportwear</span>
         </a>
@@ -273,45 +274,47 @@
       <li>
         <a href="https://www.adidas.nl/tyshawn-ii-x-zach/JQ1620.html?pr=product_rr&slot=2&rec=ds">
           <img src="images/wit-bruine-schoen.jpg" alt="witte schoen met bruine strepen">
-          <h3> €100</h3> 
-          <p>Tyshawn II X Zach</p>
+          <p>€ 100</p>
+          <h3>Tyshawn II X Zach</h3>
           <span>Originals</span>
         </a>
       </li>
-
+  
       <li>
         <a href="https://www.adidas.nl/samba-xlg-schoenen/IE1377.html?pr=product_rr&slot=8&rec=ds">
           <img src="images/zwarte-samba.jpg" alt="zwarte samba">
-          <h3> €130</h3>
-          <p>Samba XLG Schoenen</p>
+          <p>€ 130</p>
+          <h3>Samba XLG Schoenen</h3>
           <span>Originals</span>
         </a>
       </li>
-
-    <li>
+  
+      <li>
         <a href="https://www.adidas.nl/adistar-control-5-schoenen/JQ4168.html">
           <img src="images/grijs-witte-schoen.jpg" alt="grijs met witte schoen">
-          <h3> €120</h3>
-          <p>Adistar Control 5 Schoenen</p>
+          <p>€ 120</p>
+          <h3>Adistar Control 5 Schoenen</h3>
           <span>Originals</span>
         </a>
       </li>
-
+  
       <li>
         <a href="https://www.adidas.nl/forum-low-classic-schoenen/ID6858.html?pr=product_rr&slot=4&rec=ds">
-          <img src="images/witte-schoen (2).jpg" alt="witte schoen">
-          <h3> €120</h3>
-          <p>Forum Low Classic Schoenen</p>
+          <img src="images/witte-schoen(2).jpg" alt="witte schoen">
+          <p>€ 120</p>
+          <h3>Forum Low Classic Schoenen</h3>
           <span>Originals</span>
         </a>
       </li>
     </ul>
   </section>
-  
+
 <!-- 5e section jouw mening kader-->
 <section>
     <h2>JOUW MEING TELT!</h2>
     <p>We streven ernaar om je nog beter van dienst te zijn en stellen je feedback zeer op prijs.</p>
+
+    <a href="#">Terug naar boven <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 11.293L24.3536 19.6465L23.6465 20.3536L16 12.7072L8.35359 20.3536L7.64648 19.6465L16 11.293Z" fill="var(--icon-primary-color, #000)"></path></svg></a>
 </section>
 
 </main>
