--- a/detailpagina.html
+++ b/detailpagina.html
@@ -17,11 +17,39 @@
 <body class="detailpagina">
 
     <header>
-		<!-- eenvoudige hamburger -->
-		<button aria-hidden="true">☰ Menu</button>
-	 
+		<div>
+			<button>Gratis retouneren en omruilen</button>
+			<p>Gratis standaardverzending met adiClub</p>
+			<p>Meld je aan bij adiClub om te profiteren van gratis standaardverzending en punten te verdienen met elke bestelling.
+			<a href="https://www.adidas.nl/account-login">Wordt gratis lid van adiclub</a>
+			<a href="https://www.adidas.nl/help/bezorging/wat-is-de-levertijd--wat-zijn-de-verzendkosten">Meer informatie</a>	
+			</p>
+		
+			<p>adidas Collaboration Archive</p>
+			<p>Iconische adidas samenwerkingen, nu tijdelijk verkrijgbaar tegen exclusieve prijzen.
+			<a href="https://www.adidas.nl/collaborations_archive_sale">Kom een kijkje nemen</a>
+			</p>
+			
+			<p>Gratis retourneren en omruilen</p>
+			<p>Ruil of retourneer je item(s) gratis binnen 30 dagen. Gecustomizede artikelen kunnen niet geretourneerd worden.
+			<a href="https://www.adidas.nl/help/retour-vergoeding">Lees meer over retouneren</a>
+			<a href="https://www.adidas.nl/help/ruilen">Lees meer over omruilingen</a>
+			</p>
+           
+		</div>
 
-		<nav>
+
+		<!-- eenvoudige hamburger -->
+	<ul>
+	   <li><button aria-hidden="true"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M28 10.5H4V9.5H28V10.5Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28 16.5H4V15.5H28V16.5Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M28 22.5H4V21.5H28V22.5Z" fill="var(--icon-primary-color, #000)"></path></svg></button></li>
+	   <li><a href="https://www.adidas.nl/update_browser"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
+       <li><a href="index.html"><svg role="presentation" viewBox="100 100 50 32" xmlns="http://www.w3.org/2000/svg"><title>Shop</title><path fill-rule="evenodd" clip-rule="evenodd" d="M 150.07 131.439 L 131.925 100 L 122.206 105.606 L 137.112 131.439 L 150.07 131.439 Z M 132.781 131.439 L 120.797 110.692 L 111.078 116.298 L 119.823 131.439 L 132.781 131.439 Z M 109.718 121.401 L 115.509 131.439 L 102.551 131.439 L 100 127.007 L 109.718 121.401 Z" fill="black"></path></svg></a></li>
+	   <li><a href="https://www.adidas.nl/account-login"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M9.22548 20H22.7744L26.4218 25.7316L25.5781 26.2684L22.2255 21H9.77443L6.42179 26.2684L5.57812 25.7316L9.22548 20Z" fill="var(--icon-primary-color, #000)"></path><path fill-rule="evenodd" clip-rule="evenodd" d="M16 17C18.761 17 21 14.761 21 12C21 9.23895 18.761 7 16 7C13.2377 7 11 9.23881 11 12C11 14.7612 13.2377 17 16 17ZM16 18C19.3133 18 22 15.3133 22 12C22 8.68667 19.3133 6 16 6C12.6853 6 9.99996 8.68667 9.99996 12C9.99996 15.3133 12.6853 18 16 18Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
+	   <li><button><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M14.0909 6C9.62242 6 6 9.62242 6 14.0909C6 18.5594 9.62242 22.1818 14.0909 22.1818C16.3253 22.1818 18.3473 21.2768 19.812 19.812C21.2768 18.3473 22.1818 16.3253 22.1818 14.0909C22.1818 9.62242 18.5594 6 14.0909 6ZM5 14.0909C5 9.07014 9.07014 5 14.0909 5C19.1117 5 23.1818 9.07014 23.1818 14.0909C23.1818 16.4212 22.3045 18.5474 20.863 20.1559L27.3536 26.6464L26.6464 27.3536L20.1559 20.863C18.5474 22.3045 16.4212 23.1818 14.0909 23.1818C9.07014 23.1818 5 19.1117 5 14.0909Z" fill="var(--icon-primary-color, #000)"></path></svg></button></li>
+	   <li><a href="https://www.adidas.nl/cart"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M21 4H11V8H6V28H26V8H21V4ZM20 9V12H21V9H25V27H7V9H11V12H12V9H20ZM20 8V5H12V8H20Z" fill="var(--icon-primary-color, #000)"></path></svg></a></li>
+	</ul>
+	
+	   <nav>
 		  <!-- LOGO (midden) + sluitknop (rechtsboven) -->
 		  <img src="images/adidas-logo.png" alt="adidas logo">
 		  <button aria-hidden="true">✕</button>
@@ -35,7 +63,7 @@
 			<li><a href="#">KLEDING</a></li>
 			<li><a href="#">SPORTEN</a></li>
 			<li><a href="#">OUTLET</a></li>
-		  </ul> 
+		  </ul>
 	  
 		  <!-- klikbare links onder elkaar -->
 		  <ul>
