--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="author" content="israe">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2526</title>
+	<title>Adidas home</title>
 	<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
 	<link href="styles/style.css" rel="stylesheet">
