--- a/detailpagina.html
+++ b/detailpagina.html
@@ -109,11 +109,11 @@
         <li><a href="https://www.adidas.nl/search?q=schoenen">Schoenen /</a></li>
         <li><a href="https://www.adidas.nl/search?q=running">Running</a> </li>
     
-        <li><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></li>
-        <li><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></li>
-        <li><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></li>
-        <li><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></li>
-        <li><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="none" stroke="currentColor" stroke-miterlimit="10" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></li>
+        <li><a href="#reviews"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
+        <li><a href="#reviews"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
+        <li><a href="#reviews"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
+        <li><a href="#reviews"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="currentColor" stroke="0" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
+        <li><a href="#reviews"><svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><path  fill="none" stroke="currentColor" stroke-miterlimit="10" d="M13.277,6.182L9.697,8.782L11.057,12.992L7.487,10.392L3.907,12.992L5.277,8.782L1.697,6.182L6.117,6.182L7.487,1.992L8.857,6.182L13.277,6.182Z"></path></svg></a></li>
         <li><a href="#">4</a></li>
     </ul>
 
@@ -134,10 +134,17 @@
         <li><img src="images/adistar-punt-schoen.jpg" alt="adistar punt schoen"></li>
       </ul>
     
-      <ul >
+      <ul>
         <li><img src="images/adistar-blauw-zijkant.jpg" alt="blauwe adistar zijaanzicht"></li>
         <li><img src="images/adistar-blauw-bovenaanzicht.jpg" alt="blauwe adistar bovenaanzicht"></li>
         <li><img src="images/adistar-blauw-punt-schoen.jpg" alt="blauwe adistar schoen punt"></li>
+
+        <li><img src="images" alt="blauwe adistar vooraanzicht"></li>
+        <li><img src="images" alt="blauwe adistar achteraazicht"></li>
+        <li><img src="images" alt="blauwe adistar zijaanzicht"></li>
+        <li><img src="images" alt="blauwe adistar tweeschoenen"></li>
+        <li><img src="images" alt="blauwe adistar rechteraanzicht"></li>
+        <li><img src="images" alt="blauwe adistar "></li>
       </ul>
 </section>
 
@@ -234,7 +241,7 @@
 
  <!--dropdowns -->
  
-	<details>
+	<details id="reviews">
 	  <summary>Beschrijving<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 19.2929L8.35359 11.6465L7.64648 12.3536L16 20.7071L24.3536 12.3536L23.6465 11.6465L16 19.2929Z" fill="var(--icon-primary-color, #000)"></path></svg></summary>
       <h2>DE Y2K HARDLOOPSTIJL LEEFT VOORT IN DEZE LIFESTYLE SNEAKERS.</h2>
 	 <p>De adidas Adistar Control 5 sneakers brengen een iconische hardloopstijl uit de jaren 2000 terug. Het bovenwerk van open mesh is gelaagd met metallic zilveren details en synthetische 3-Stripes. Een EVA-middenzool en Adiprene+ in de voorvoet bieden demping voor een soepele tred, terwijl de rubberen loopzool robuuste grip toevoegt.    
