--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
 
 	<!-- 1e section onder nav-->
 <section>
-	<img src="images/eerste-foto-homepagina.jpeg" alt="home pagina foto">
-
+	
 	<h1>Back in the game</h1>
 	<p>Veld,baan,gym of track. Maak een comback in</p>
 	<p>sportieve looks die je de hele dag energie geven</p>
@@ -160,8 +159,6 @@
 
 <!-- 3e section foto met buttons heren/dames -->
 <section>
-	<img src="images/megarida.jpg" alt="megarida foto">
-
 
   <h2>Megaride</h2>
   <p>Vis-tach energie.</p>
@@ -265,12 +262,9 @@
     <button><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M6.7206 6H11.7071L16 10.2929L20.2929 6H25.2794L29.6328 13.0743L16 26.7071L2.36719 13.0743L6.7206 6ZM7.2794 7L3.63281 12.9257L16 25.2929L28.3672 12.9257L24.7206 7H20.7071L16 11.7071L11.2929 7H7.2794Z" fill="var(--icon-primary-color, #000)"></path></svg></button>
   </li>
 </ul>
-
-<!-- alles bekijken knop -->
-<a href="https://www.adidas.nl/nieuw_binnen">Alles bekijken</a>
  
 <!-- tweede productenlijst die verborgen wordt met css -->	 
-<ul hidden>
+<ul>
 	<li>
 	  <a href="https://www.adidas.nl/handball-spezial-comfort-closure-schoenen-met-elastische-veters-kids/KI3944.html?pr=taxonomy_rr&slot=1&rec=mt">
 		<img src="images/campus-taupe.jpg" alt="adidas campus taupe">
@@ -314,6 +308,9 @@
 	</li>
 
   </ul>
+
+  <!-- alles bekijken knop -->
+<a href="https://www.adidas.nl/nieuw_binnen">Alles bekijken</a>
 
 </section>
 
@@ -458,7 +455,10 @@
     <h2>JOUW MEING TELT!</h2>
     <p>We streven ernaar om je nog beter van dienst te zijn en stellen je feedback zeer op prijs.</p>
 	
-	<a href="#">Terug naar boven <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 11.293L24.3536 19.6465L23.6465 20.3536L16 12.7072L8.35359 20.3536L7.64648 19.6465L16 11.293Z" fill="var(--icon-primary-color, #000)"></path></svg></a>
+	<a href="#">
+		Terug naar boven 
+		
+<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="true"><path fill-rule="evenodd" clip-rule="evenodd" d="M16 11.293L24.3536 19.6465L23.6465 20.3536L16 12.7072L8.35359 20.3536L7.64648 19.6465L16 11.293Z" fill="var(--icon-primary-color, #000)"></path></svg></a>
 
 </section> 
 
